--- a/2-ListBox-Binding/2-ListBox-Binding.csproj
+++ b/2-ListBox-Binding/2-ListBox-Binding.csproj
@@ -95,8 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Assets\" />
+    <Resource Include="Assets\01.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\02.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
