--- a/1-ListBox-simple/1-ListBox-simple.csproj
+++ b/1-ListBox-simple/1-ListBox-simple.csproj
@@ -94,8 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Assets\" />
+    <Resource Include="Assets\02.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\01.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
